feat: 🎸 add a map that show where clicks come from
add a map from map-box showing where clicks come from, total clicks
number and a legend

--- a/src/app/my-urls/my-urls.component.css
+++ b/src/app/my-urls/my-urls.component.css
@@ -36,3 +36,14 @@
   max-width: 300px;
   margin: 0 auto;
 }
+
+.footer-infos{
+  font-weight: 500;
+  color: #313552;
+}
+
+.modal-card{
+  
+  width: 80vw;
+
+}
