--- a/src/styles.css
+++ b/src/styles.css
@@ -63,3 +63,63 @@ body {
   overflow: auto;
   max-width: 100vw;
 }
+.marker {
+  background-size: cover;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  cursor: pointer;
+  color: white;
+}
+
+.marker-major{
+  background-color: #2eb086;
+}
+
+.marker-minor{
+  background-color: #9ae2cb;
+}
+.where-title{
+  font-size: 15px;
+  font-weight: bold;
+  color: #2eb086;
+}
+.clicks-num{
+  font-size: 11px;
+  font-weight: bold;
+  color: #2eb086;
+}
+
+
+
+.map-overlay {
+  position: absolute;
+  right: 5px;
+  background: #fff;
+  margin-right: 20px;
+  font-family: Arial, sans-serif;
+  overflow: auto;
+  border-radius: 3px;
+  bottom: 92px
+}
+
+#features {
+  top: 0;
+  height: 100px;
+  margin-top: 20px;
+  width: 250px;
+}
+
+#legend {
+  padding: 10px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  line-height: 18px;
+}
+
+.legend-key {
+  display: inline-block;
+  border-radius: 20%;
+  width: 10px;
+  height: 10px;
+  margin-right: 5px;
+}
