--- a/src/app/auth/signup/errorModal.component.html
+++ b/src/app/auth/signup/errorModal.component.html
@@ -5,11 +5,11 @@
   </div>
   <span *ngIf="dialogTitle">
 
-    <span *ngIf="dialogTitle.msg">
+    <span *ngIf="dialogTitle[0].msg">
       <mat-error *ngFor="let item of dialogTitle">{{ item.msg }}</mat-error>
     </span>
     <span *ngIf="dialogTitle.message">
-      <mat-error>{{dialogTitle.message }}</mat-error>
+      <mat-error>{{dialogTitle.message}}</mat-error>
     </span>
   </span>
 </div>
