--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  
+  background-color:whitesmoke;
 }
 h1 {
   font-size: x-large;
