--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -34,7 +34,7 @@
             routerLinkActive="router-link-active"
             >shortangular.netlify.app/{{ genSlug }}</a
           >
-
+          <button class="copy-btn" color="primary" [cdkCopyToClipboard]="link" mat-raised-button>copia</button>
           
         </div>
       </div>
