fix some secondary problems and adjust style

--- a/src/app/my-urls-overview/my-urls-overview.component.html
+++ b/src/app/my-urls-overview/my-urls-overview.component.html
@@ -2,7 +2,7 @@
   <div class="card">
     <div class="card-content">
       <div class="content">
-        <div class="overwiew-card-title">ALL URLs</div>
+        <div class="overwiew-card-title">ALL URLS</div>
         <div class="stats-overview">
           <span class="overview-stats">{{total_urls}}</span>
           <span class="icon-overview">
@@ -25,7 +25,7 @@
   <div class="card">
     <div class="card-content">
       <div class="content">
-        <div class="overwiew-card-title">ALL CLICKs</div>
+        <div class="overwiew-card-title">ALL CLICKS</div>
         <div class="stats-overview">
           <span class="overview-stats">{{total_urls_clicks}}</span>
           <span class="icon-overview">
