--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -11,7 +11,7 @@ mat-card {
   display: flex;
   flex-wrap: wrap;
 }
-button {
+.shorten-btn {
   color: white;
   position: absolute;
   top: -11px;
@@ -41,8 +41,7 @@ button {
   margin-top: -89px;
 }
 .copy-btn {
-  margin-top: 139px;
-  margin-right: 15px;
+  margin-left: 20px;
 }
 .columns {
   margin-right: 0;
@@ -52,3 +51,51 @@ button {
     margin-top: 20px;
   }
 }
+
+.gen-link{
+  display: flex;
+  align-items: center;
+}
+.ft-green-tick{
+  margin-right: 10px;
+}
+/* animation-success-icon */
+
+ @supports (animation: grow .5s cubic-bezier(.25, .25, .25, 1) forwards) {
+  .tick {
+     stroke-opacity: 0;
+     stroke-dasharray: 29px;
+     stroke-dashoffset: 29px;
+     animation: draw .5s cubic-bezier(.25, .25, .25, 1) forwards;
+     animation-delay: .6s
+ }
+
+ .circle {
+     fill-opacity: 0;
+     stroke: #2eb086;
+     stroke-width: 16px;
+     transform-origin: center;
+     transform: scale(0);
+     animation: grow 1s cubic-bezier(.25, .25, .25, 1.25) forwards;   
+ }   
+}
+
+@keyframes grow {
+ 60% {
+     transform: scale(.8);
+     stroke-width: 4px;
+     fill-opacity: 0;
+ }
+ 100% {
+     transform: scale(.9);
+     stroke-width: 8px;
+     fill-opacity: 1;
+     fill: #2eb086;
+ }
+}
+
+@keyframes draw {
+ 0%, 100% { stroke-opacity: 1; }
+ 100% { stroke-dashoffset: 0; }
+}
+
