--- a/src/app/my-urls/my-urls.component.html
+++ b/src/app/my-urls/my-urls.component.html
@@ -15,7 +15,7 @@
           >
             <thead>
               <tr>
-                <th>Target</th>
+                <th>Destination</th>
                 <th>Link</th>
               </tr>
             </thead>
