--- a/src/app/my-urls/my-urls.component.html
+++ b/src/app/my-urls/my-urls.component.html
@@ -21,7 +21,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let item of myUrls.urls; let i = index">
+              <tr *ngFor="let item of myUrls?.urls; let i = index">
                 <td data-label="Link">
                   <p
                     matTooltip="Click to copy"
