--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -36,29 +36,54 @@
         <div *ngIf="genSlug" class="res">
           <div>
             <p>Edit link</p>
-            <mat-form-field>
-              <input matInput type="text" placeholder="title" name="" id="">
+            <mat-form-field *ngIf="signedin">
+              <input matInput type="text" placeholder="title" name="" id="" />
             </mat-form-field>
             <button mat-button>Save</button>
           </div>
-          <div *ngIf="genSlug" class="gen-link">   
+          <div *ngIf="genSlug" class="gen-link">
             <div class="slug">
-
-              <svg class="ft-green-tick" xmlns="http://www.w3.org/2000/svg" height="20" width="20" viewBox="0 0 48 48" aria-hidden="true">
-                <circle class="circle" fill="#5bb543" cx="24" cy="24" r="22"/>
-                <path class="tick" fill="none" stroke="#FFF" stroke-width="6" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M14 27l5.917 4.917L34 17"/>
+              <svg
+                class="ft-green-tick"
+                xmlns="http://www.w3.org/2000/svg"
+                height="20"
+                width="20"
+                viewBox="0 0 48 48"
+                aria-hidden="true"
+              >
+                <circle class="circle" fill="#5bb543" cx="24" cy="24" r="22" />
+                <path
+                  class="tick"
+                  fill="none"
+                  stroke="#FFF"
+                  stroke-width="6"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-miterlimit="10"
+                  d="M14 27l5.917 4.917L34 17"
+                />
               </svg>
               <a
-              target="_blank"
-              [routerLink]="['../', genSlug]"
-              routerLinkActive="router-link-active"
-              >shortangular.netlify.app/{{ genSlug }}</a
+                target="_blank"
+                [routerLink]="['../', genSlug]"
+                routerLinkActive="router-link-active"
+                >shortangular.netlify.app/{{ genSlug }}</a
               >
-            </div> 
-            <div class="copy-btn-div">
-              <button name="copy" ngDefaultControl (click)="copied()" class="copy-btn" [(ngModel)]="copy" color="primary" [cdkCopyToClipboard]="link" mat-button>{{copy}}</button>
             </div>
-            
+            <div class="copy-btn-div">
+              <button
+                name="copy"
+                ngDefaultControl
+                (click)="copied()"
+                class="copy-btn"
+                [(ngModel)]="copy"
+                color="primary"
+                [cdkCopyToClipboard]="link"
+                mat-button
+              >
+                {{ copy }}
+              </button>
+            </div>
           </div>
         </div>
       </div>
