fix some btn styles and try new accent color

--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -2,7 +2,7 @@
   <ngx-spinner
     bdColor="rgba(51,51,51,0.8)"
     size="medium"
-    color="#2eb086"
+    color="#11d596"
     type="ball-scale-multiple"
   ></ngx-spinner>
   <h2 class="title has-text-centered">Login</h2>
@@ -22,7 +22,7 @@
       >{{ error }}</mat-error
     >
     <div class="is-flex is-justify-content-center">
-      <button type="submit" [disabled]="loginForm.invalid" mat-raised-button>
+      <button class="btn-align-custom" type="submit" [disabled]="loginForm.invalid" mat-raised-button>
         login
       </button>
     </div>
