--- a/src/app/my-urls/my-urls.component.css
+++ b/src/app/my-urls/my-urls.component.css
@@ -3,7 +3,7 @@
   color: white;
 }
 .url-title {
-  color: #2eb086;
+  color: #11d596;
 }
 
 .item {
@@ -94,7 +94,7 @@
   cursor: pointer;
 }
 .p-link{
-  color: #2eb086;
+  color: #11d596;
 }
 
 
