--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <ngx-spinner
       bdColor="rgba(51,51,51,0.8)"
       size="medium"
-      color="#2eb086"
+      color="#11d596"
       type="ball-scale-multiple"
     ></ngx-spinner>
     <div>
