--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -17,7 +17,7 @@
       placeholder="{{ label }}"
       autocomplete="off"
     />
-    
+    <mat-icon matSuffix class="spacer" *ngIf="inputType!=='password'"></mat-icon>
       <mat-icon *ngIf="inputType=='password'" matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
     </mat-form-field>
   </div>
