--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@ body {
 }
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Righteous;
   background-color:whitesmoke;
 }
 h1 {
