--- a/src/app/auth/signup/signup.component.css
+++ b/src/app/auth/signup/signup.component.css
@@ -59,3 +59,7 @@ button {
       text-align: center;
       margin-top: 55px;
     }
+    .pass-info{
+      font-size: 0.7em;
+    max-width: 280px;
+    }
