--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -77,7 +77,10 @@
     <span class="switch to-sign-in" tabindex="8">
       <span> Do you already have an account? </span>
       <div class="button-redirect-signin">
-        <button class="btn-align-custom" mat-raised-button>Sign In</button>
+        <a routerLink="../signin">
+
+          <button  class="btn-align-custom" mat-raised-button>Sign In</button>
+        </a>
       </div>
     </span>
   </div>
