--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,13 +2,14 @@
   <mat-toolbar>
       <h3>
         <a
+        mat-button
           class="logo"
           [routerLink]="['home']"
           routerLinkActive="router-link-active"
           >shortURL</a
         >
       </h3>
-      <span class="example-spacer"></span>
+    <span class="example-spacer"></span>
     <!-- IMPLEMENT SEARCH-BAR FOR SEARCHING BY TITLE -->
      <!-- <div class="is-hidden-mobile search-bar">
       <app-search-bar *ngIf="router.url === '/myUrls'"></app-search-bar>
@@ -35,22 +36,23 @@
         >
           <ul>
             <li class="header-li" (click)="onMenuItemClick()">
-              <a routerLink="home" routerLinkActive="router-link-active">
+              <a mat-button routerLink="home" routerLinkActive="router-link-active">
                 Home
               </a>
             </li>
             <li class="header-li" (click)="onMenuItemClick()" *ngIf="!signedin" color="primary">
-              <a routerLink="signup" routerLinkActive="router-link-active">
+              <a mat-button routerLink="signup" routerLinkActive="router-link-active">
                 Sign Up
               </a>
             </li>
             <li class="header-li" (click)="onMenuItemClick()" *ngIf="!signedin" color="primary">
-              <a routerLink="signin" routerLinkActive="router-link-active">
+              <a mat-button routerLink="signin" routerLinkActive="router-link-active">
                 Sign In
               </a>
             </li>
             <li class="header-li" (click)="onMenuItemClick()" *ngIf="signedin" color="primary">
               <a
+              mat-button
                 [routerLink]="['myUrls']"
                 routerLinkActive="router-link-active"
               >
@@ -58,12 +60,12 @@
               </a>
             </li>
             <li *ngIf="signedin" class="header-li" (click)="onMenuItemClick()">
-              <a routerLink="home" routerLinkActive="router-link-active">
+              <a mat-button routerLink="home" routerLinkActive="router-link-active">
                <mat-icon>account_circle</mat-icon>
               </a>
             </li>
             <li class="header-li">
-              <a (click)="onSignOut()" *ngIf="signedin"> Sign Out </a>
+              <a mat-button (click)="onSignOut()" *ngIf="signedin"> Sign Out </a>
             </li>
           </ul>
         </div>
